--- a/ops.html
+++ b/ops.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-23 11:01:46
+ * @LastEditTime: 2023-04-23 21:37:55
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -61,39 +61,39 @@
                     <ul style="list-style: none">
                         <li>
                             <progress value="75" max="100"></progress>
-                            熟悉CentOS, Ubuntu, Debian发行版, 了解系统参数调优.
+                            熟练掌握CentOS, Ubuntu, Debian等Linux发行版的管理与维护.
                         </li>
                         <li>
                             <progress value="80" max="100"></progress>
-                            熟悉K8s集群部署维护, 应用容器化部署以及问题排查.
+                            熟练掌握K8s集群部署维护, 应用容器化部署以及问题排查.
                         </li>
                         <li><progress value="70" max="100"></progress>
-                            熟悉Python以及Shell, 有一定的代码编写经验, 了解Django框架.
+                            熟悉Python以及Shell, 有一定的代码编写经验.
                         </li>
                         <li>
                             <progress value="70" max="100"></progress>
-                            熟悉Logstash日志收集过滤规则编写, 熟悉ES集群搭建维护及异常处理.
+                            熟悉Logstash日志收集过滤规则编写, 熟悉ES集群部署及维护.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            devops工具: 熟悉Ansible, Gitlab, Jenkins, 了解Terraform.
+                            熟悉Ansible, Gitlab, Jenkins, 了解Terraform等devops工具.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            熟悉Nginx, KeepAlived, Zookeeper, 了解Ceph等组件的部署使用以及维护.
+                            熟悉Nginx, KeepAlived, Zookeeper, Grafana, 了解Ceph等组件的部署及维护.
                         </li>
-                        <!-- <li>
+                        <li>
                             <progress value="65" max="100"></progress>
                             熟悉使用Grafana做监控展示, 了解Prometheus的原理及使用.
-                        </li> -->
+                        </li>
                         <li>
                             <progress value="60" max="100"></progress>
-                            了解MySQL, Redis的原理及搭建维护, 有一定的SQL编写经验.
+                            了解MySQL, Redis等数据库原理及部署维护, 有一定的SQL编写经验.
                         </li>
-                        <!-- <li>
+                        <li>
                             <progress value="60" max="100"></progress>
-                            了解VMware VSphere平台的使用.
-                        </li> -->
+                            了解VMware VSphere, 电信天翼云等平台的使用.
+                        </li>
                         <li>&nbsp;</li>
                     </ul>
                 </div>
@@ -111,7 +111,7 @@
                         <p>
                             1. 搭建, 维护电信天翼云平台以及组件, 包括K8s容器平台, ELK日志平台以及Zookeeper, Kafka, 负载均衡等组件. <br>
                             2. 为用户解决平台或组件问题, 以及提供技术支持, 协助业务上云: 如应用容器化部署, 业务日志收集等.<br>
-                            3. 公司内部业务的运维支撑.
+                            3. 公司内部业务的运维支撑, 对外部用户演示平台等.
                         </p>
                     </article>
                     <article>
@@ -133,30 +133,32 @@
 
                 <div class="sectionContent">
                     <article>
-                        <h2>PTC业务日志收集 - 邮电</h2>
+                        <h2>云平台组件部署 - 邮电</h2>
                         <p>
-                            项目背景: 因监控需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, Logstash, 过滤后传输到ES集群并通过Grafana展示监控.  <br>
-                            个人参与了该项目中全部流程, 编写Filebeat收集配置, Logstash过滤规则, 绘制Grafana图形页面. <br>
-                            难点: 为降低集群压力,部分数据需要在Logstash中编写Ruby脚本做聚合统计. 最后Grafana从ES获取数据做图形监控展示. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/elk-log-rules.txt">demo配置文件链接</a></p>
+                            项目背景: 某省公司业务需求, 要进行K8s、MySQL、Nginx等相关中间件的部署. <br>
+                            1. 在3台服务器上进行Paas层面的接口程序和相关中间件控制台的部署. <br>
+                            2. 根据业务需求, 使用若干台服务器进行K8s集群部署, 使用S3存储作为ETCD的定时备份及Harbor的数据存储. <br>
+                            3. 在K8S集群中使用2台服务器作为边缘节点部署Ingress-Nginx做服务转发.<br>
+                            4. 在剩余的4台服务器上安装2套Mysql数据库集群(一主一从), 交付业务使用.
+                        </p>
                     </article>
                     <article>
-                        <h2>Shell脚本服务器初始化 - 邮电</h2>
+                        <h2>Shell初始化服务器 - 邮电</h2>
                         <p>
-                            脚本背景: 客户提供的服务器多数处于网络离线状态, 且不符合开通实例要求, 需要登录手动配置Java, 挂盘等. <br>
-                            主程序通过python编写, 并兼容python2, 为方便执行没有使用主流的paramiko库, 而是通过调用OS的scp, sshpass进行复制, 登录, 执行脚本. <br>
-                            功能可通过入参控制执行, 目前已实现的功能: 配置Java环境, 挂载数据盘, 新增用户, sudo权限, ssh公钥等. <a style="color:#444;" href="https://github.com/erythrun/ops-script/tree/master/init%20server">demo配置文件链接</a></p>
+                            脚本背景: 客户提供的服务器多数处于网络离线状态, 且不符合开通实例要求, 需要登录手动配置Java, 挂盘, 创建用户等, 步骤操作繁琐且容易出错遗漏. <br>
+                            主程序通过Python编写(兼容Python2/3), 为方便离线环境执行, 没有使用主流的Paramiko库, 而是通过调用OS的scp, sshpass进行复制, 登录, 执行Shell脚本. <br>
+                            功能可通过参数控制执行, 目前已实现的功能: 配置Java环境, 挂载数据盘, 新增用户, sudo权限, ssh公钥等. <a style="color:#444;" href="https://github.com/erythrun/ops-script/tree/master/init%20server">demo配置文件链接</a></p>
                         </p>
                     </article>
                     <article>
                         <h2>Jenkins流水线编写 - 邮电</h2>
                         <p>
-                            背景: 内部业务-易运营服务部署在K8s集群, 协助使用Jenkins配置流水线发布. <br>
-                            流水线内容: Git克隆指定分支代码, 通过Docker进行多阶段bulid完成编译打包, 然后推送到Harbor仓库. 最后通过kubectl命令上线业务的image. (通过RBAC仅授予该kubectl对业务命名空间的操作权限)
-
+                            项目背景: 内部业务-易运营服务部署在K8s集群, 协助使用Jenkins Pipline配置流水线发布. <br>
+                            流水线内容:Git克隆指定分支代码并扫描, 通过Docker进行多阶段bulid完成编译打包, 然后推送到Harbor仓库. 最后通过kubectl命令上线业务的image. (通过RBAC仅授予该kubectl对业务命名空间的操作权限)
                         </p>
                     </article>
                     <article>
-                        <h2>业务上报自动化 - 卓望</h2>
+                        <h2>Python监控数据上报 - 卓望</h2>
                         <p>
                             项目背景: 权益超市在特殊日期业务繁忙时监控信息需每隔1小时就要上报一次, 信息从Grafana中获取再手动发送; 研究通过Python库Selenium操作Chrome浏览器Headless模式登录到Grafana, 截图并获取到网页代码, 通过xpath过滤出关键信息, 再邮件输出监控内容. 脚本后续还改造为自动日报输出. <a
                             style="color:#444;" href="https://raw.githubusercontent.com/erythrun/OpsScript/master/grafana_monitor_report_by_selenium.py"
