--- a/index.html
+++ b/index.html
@@ -147,8 +147,8 @@
                     <article>
                         <h2>云平台组件部署 - 邮电</h2>
                         <p>
-                            项目背景: 某省公司业务需求, 要进行K8s、MySQL、Nginx等相关中间件的部署. <br>
-                            1. PaaS层面的接口程序和相关中间件控制台, Mysql数据库部署. <br>
+                            项目背景: 总部业务需求, 研讨决定在天翼云平台按省份各部署1套系统, 系统包含了K8s、MySQL、Nginx、缓存等相关中间件. <br>
+                            1. 部署PaaS层面的接口程序和相关中间件控制台、Mysql数据库、缓存等组件. <br>
                             2. 根据业务需求, 使用若干台服务器进行K8s集群部署, 使用S3存储作为ETCD的定时备份及Harbor的数据存储. <br>
                             3. 在K8S集群中使用2台服务器打上标签作为边缘节点部署Ingress-Nginx, 实现服务转发功能.
                         </p>
