--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-24 15:51:11
+ * @LastEditTime: 2023-04-26 09:13:38
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -80,7 +80,7 @@
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            熟悉Nginx、KeepAlived、Zookeeper、Kafka, 了解Ceph等组件的部署及维护.
+                            熟悉Nginx、KeepAlived、Zookeeper、Caddy, 了解Ceph等组件的部署及维护.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
@@ -95,8 +95,8 @@
                             了解MySQL, Redis数据库原理及基本维护使用, 熟悉编写SQL.
                         </li>
                         <li>
-                            <progress value="55" max="100"></progress>
-                            了解VMware VSphere, 电信天翼云等平台的使用.
+                            <progress value="65" max="100"></progress>
+                            熟悉电信天翼云、VMware VSphere平台的使用.
                         </li>
                         <li>&nbsp;</li>
                     </ul>
