移除 kafka; elk调整

--- a/ops.html
+++ b/ops.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-24 16:19:42
+ * @LastEditTime: 2023-04-26 09:21:44
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -70,17 +70,17 @@
                         <li><progress value="70" max="100"></progress>
                             熟悉Python以及Shell, 有一定的代码编写经验.
                         </li>
-                        <li>
+                        <!-- <li>
                             <progress value="70" max="100"></progress>
                             熟悉Logstash日志收集过滤规则编写, 熟悉ES集群部署及维护.
-                        </li>
+                        </li> -->
                         <li>
                             <progress value="65" max="100"></progress>
                             熟悉Ansible、Gitlab、Jenkins, 了解Terraform等devops工具.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            熟悉Nginx、KeepAlived、Zookeeper、Caddy, 了解Ceph等组件的部署及维护.
+                            熟悉ELK、Nginx、KeepAlived、Zookeeper、Caddy, 了解Ceph等组件的部署及维护.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
