--- a/ops.html
+++ b/ops.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-26 09:21:44
+ * @LastEditTime: 2023-04-28 11:27:07
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -65,7 +65,7 @@
                         </li>
                         <li>
                             <progress value="80" max="100"></progress>
-                            熟练掌握K8s集群部署维护, 应用容器化部署以及问题排查.
+                            熟悉Docker容器, K8s容器编排技术, 应用容器化部署以及问题排查.
                         </li>
                         <li><progress value="70" max="100"></progress>
                             熟悉Python以及Shell, 有一定的代码编写经验.
