--- a/english.html
+++ b/english.html
@@ -51,7 +51,7 @@
                     <ul style="list-style: none">
                         <li>
                             <progress value="80" max="100"></progress>
-                             Proficient in Docker, Kubernetes.
+                             Proficient in K8s cluster deployment and maintenance, application containerized deployment and troubleshooting.
                         </li>
                         <li>
                             <progress value="75" max="100"></progress>
@@ -66,7 +66,7 @@
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
-                            Skillful the automation tool such as Gitlab, Ansible.
+                            Skillful the automation tool such as Ansible, Jenkins, Gitlab.
                         </li>
                         <li>
                             <progress value="65" max="100"></progress>
@@ -124,14 +124,14 @@
                     <article>
                         <h2>Jenkins Pipeline - Telcom Talents </h2>
                         <p>
-                            Project background: Easy Operation Project is deployed in K8s cluster, now use Jenkins Pipeline to realize CI/CD function <br>
-                            Pipeline content: Git clones the specified branch code and scans it, completes the compilation and packaging through multi-stage bulid through Docker, and then pushes it to the Harbor. Finally, the image of the online service is launched through the kubectl command. (Only grant the kubectl the operation authority for the business namespace through RBAC).
+                            Background: Easy Operation Project is deployed in K8s cluster, now use Jenkins Pipeline to realize CI/CD function <br>
+                            Pipeline content: Git clones the specified branch code and scans it, completes the compilation and packaging through multi-stage bulid through Docker, and then pushes it to Harbor. Finally, the image of the online service is launched through the kubectl command. (Only grant the kubectl the operation authority for the namespace through RBAC).
                         </p>
                     </article>
                     <article>
                         <h2>Log collect - Telcom Talents</h2>
                         <p>
-                            Get a task need retrieve key information from logs. I need to deploy Filebeat on the server, collect logs to Logstash, filter them and transfer them to the ElasticSearch cluster. <br>
+                            Background: Get a task need retrieve key information from logs. I need to deploy Filebeat on the server, collect logs to Logstash, filter them and transfer them to the ElasticSearch cluster. <br>
 
                             In this project, I wrote the Filebeat and Logstash filter rules. In order to reduce the pressure of ES cluster, some data need caculated in Logstash. So I wrote the function with Ruby in Aggregate module of Logstash.
                             <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/elk-log-rules.txt">demo config link</a></p>
