项目描述调整

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-04-24 15:51:11
+ * @LastEditTime: 2023-09-24 21:59:10
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -121,7 +121,7 @@
                     <article>
                         <h2>卓望数码 - 系统运维 - 2018.12-2021.03 </h2>
                         <p>
-                            1. 保障权益超市系统的稳定运行, 处理异常业务. <br>
+                            1. 保障权益超市系统稳定运行, 处理异常问题. <br>
                             2. 业务Dockerfile文件的编写, CI/CD流程修改, 业务上线部署, 编写脚本等. <br>
                             3. 协助维护广东移动VMware VSphere平台.<br>
                         </p>
@@ -149,7 +149,7 @@
                         <p>
                             项目背景: 总部业务需求, 研讨决定在天翼云平台按省份各部署1套系统, 系统包含了K8s、MySQL、Nginx、缓存等相关中间件. <br>
                             1. 部署PaaS层面的接口程序和相关中间件控制台、Mysql数据库、缓存等组件. <br>
-                            2. 根据业务需求, 使用若干台服务器进行K8s集群部署, 使用S3存储作为ETCD的定时备份及Harbor的数据存储. <br>
+                            2. 根据需求, 使用若干台服务器进行K8s集群部署, 使用S3存储作为ETCD的定时备份及Harbor的数据存储. <br>
                             3. 在K8S集群中使用2台服务器打上标签作为边缘节点部署Ingress-Nginx, 实现服务转发功能.
                         </p>
                     </article>
@@ -170,7 +170,7 @@
                     <article>
                         <h2>ptc业务日志收集 - 邮电</h2>
                         <p>
-                            项目背景: 因监控需求从日志进行检索关键信息. 需要在服务器上部署Filebeat, Logstash, 过滤后传输到ES集群并展示监控.  <br>
+                            项目背景: 监控需从日志获取关键信息进行展示. 于是在服务器上部署Filebeat, Logstash, 过滤后传输到ES集群并展示监控页面.  <br>
                             个人参与了该项目中全部流程, 负责编写部分日志的Filebeat收集, Logstash过滤规则. 部分业务监控数据需要在Logstash中编写Ruby脚本做聚合统计. 最后Grafana从ES获取数据做图形监控展示. <a style="color:#444;" href="https://github.com/erythrun/ops-script/blob/master/elk-log-rules.txt">配置文件链接</a></p>
                     </article>
                     <article>
