描述修改, 项目内容改回storm

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun.Zala
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2023-07-17 11:20:12
+ * @LastEditTime: 2024-04-22 17:31:37
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -114,8 +114,8 @@
                         <h2>广东邮电 - 云平台运维 - 2021.03-今 </h2>
                         <p>
                             1. 搭建, 维护电信天翼云平台以及组件, 包括K8s容器平台, ELK日志平台以及负载均衡等组件. <br>
-                            2. 为用户解决平台或组件问题, 以及提供技术支持, 协助业务上云: 如应用容器化部署, 业务日志收集等.<br>
-                            3. 公司内部业务的运维支撑, 对外部用户演示平台等.
+                            2. 负责客户私有云平台部署维护, 定位并处理客户环境故障事件, 协助业务上云: 应用容器化部署, 业务日志收集等.<br>
+                            3. 公司内部业务的运维支撑, 流水线的定制开发, 编写自动化脚本等.
                         </p>
                     </article>
                     <article>
@@ -145,6 +145,13 @@
 
                 <div class="sectionContent">
                     <article>
+                        <h2>Storm容器化部署 - 邮电</h2>
+                        <p>
+                            项目背景: 接到需求对组件Storm容器化, 使用Helm批量部署并对接到自研K8s. Helm chart仓库中已存在Storm包, 在此基础上做二次修改. <br><br>
+                            难点: 原有包的持久化存储仅使用了PVC进行持久化存储; 自研K8s部署时需传递定制参数, 仅修改value配置不能符合要求. 花费了一定时间学习了Helm的编写, 直接修改包中的statefulSet使用SC进行持久化; 定制参数则在对应的模板value文件中追加定义.
+                        </p>
+                    </article>
+                    <!-- <article>
                         <h2>云平台组件部署 - 邮电</h2>
                         <p>
                             项目背景: 总部业务需求, 研讨决定在天翼云平台按省份各部署1套系统, 系统包含了K8s、MySQL、Nginx、缓存等相关中间件. <br>
@@ -152,7 +159,7 @@
                             2. 根据业务需求, 使用若干台服务器进行K8s集群部署, 使用S3存储作为ETCD的定时备份及Harbor的数据存储. <br>
                             3. 在K8S集群中使用2台服务器打上标签作为边缘节点部署Ingress-Nginx, 实现服务转发功能.
                         </p>
-                    </article>
+                    </article> -->
                     <article>
                         <h2>Jenkins流水线编写 - 邮电</h2>
                         <p>
@@ -160,13 +167,6 @@
                             流水线内容: Git克隆指定分支代码并扫描, 通过Docker进行多阶段bulid完成编译打包, 然后推送到Harbor仓库. 最后通过kubectl命令上线业务的image. (通过RBAC仅授予该kubectl对业务命名空间的操作权限)
                         </p>
                     </article>
-                    <!-- <article>
-                        <h2>Storm容器化部署 - 邮电</h2>
-                        <p>
-                            项目背景: 接到需求对组件Storm容器化, 使用Helm批量部署并对接到自研K8s. Helm chart仓库中已存在Storm包, 在此基础上做二次修改. <br><br>
-                            难点: 原有包的持久化存储仅使用了PVC进行持久化存储; 自研K8s部署时需传递定制参数, 仅修改value配置不能符合要求. 花费了一定时间学习了Helm的编写, 直接修改包中的statefulSet使用SC进行持久化; 定制参数则在对应的模板value文件中追加定义.
-                        </p>
-                    </article> -->
                     <article>
                         <h2>ptc业务日志收集 - 邮电</h2>
                         <p>
