--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2024-05-20 20:08:18
+ * @LastEditTime: 2024-05-20 20:13:00
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -165,8 +165,8 @@
                         <p>
                             背景: 位于容器集群外部的服务需要直通容器集群的Pod IP. <br>
                             在搜索了相关文档后, 确定通过Docker运行calico-node镜像方案进行; <br>
-                            参考Calico官方文档, 配置上填写K8s集群链接信息, 容器授予宿主机网络的操作权限. <br>
-                            经过多次测试, 成功运行calico-node容器, 并在宿主机防火墙上观察生成Pod网段相关的规则, 打通Pod网络
+                            参考Calico官方文档, 容器配置上K8s集群链接信息, 授予宿主机网络的操作权限. <br>
+                            经过多次测试, 成功运行calico-node, 并在宿主机防火墙上观察生成Pod网段相关的规则, 打通Pod网络
                         </p>
                     </article>
                     <!-- <article>
