自我评价修改

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  * @Author: Athrun
  * @Email: erythron@outlook.com
  * @Date: 2019-10-15 20:23:56
- * @LastEditTime: 2024-05-20 20:13:00
+ * @LastEditTime: 2024-05-20 21:25:53
  * @description: 说明
  -->
 <!DOCTYPE html>
@@ -164,9 +164,9 @@
                         <h2>外部直通容器Pod网络 - 邮电</h2>
                         <p>
                             背景: 位于容器集群外部的服务需要直通容器集群的Pod IP. <br>
-                            在搜索了相关文档后, 确定通过Docker运行calico-node镜像方案进行; <br>
+                            在搜索了相关文档后, 确定通过Docker运行calico-node容器方案进行; <br>
                             参考Calico官方文档, 容器配置上K8s集群链接信息, 授予宿主机网络的操作权限. <br>
-                            经过多次测试, 成功运行calico-node, 并在宿主机防火墙上观察生成Pod网段相关的规则, 打通Pod网络
+                            经过多次测试排查, 成功运行并在宿主机防火墙上观察生成Pod网段相关的规则, 打通Pod网络.
                         </p>
                     </article>
                     <!-- <article>
@@ -215,9 +215,9 @@
                     <article>
                         <h2> </h2>
                         <p>
-                            认真负责, 乐于尝试新事物, 遇到问题能通过Google或官方文档去学习, 解决;<br>
-                            拥有较强的学习能力, 不断提高自己的技术水平. <br>
-                            如需查看网页版简历请访问 <a style="color:#444;" href="https://erythrun.github.io/resume/">https://erythrun.github.io/resume/</a>
+                            拥有较强的学习能力, 遇到问题能通过Google或官方文档去学习, 解决;  <br>
+                            乐于尝试新事物, 业余时间曾折腾过VPS, 硬路由, openwrt等. <br>
+                            感谢查阅简历, 如需查看网页版请访问 <a style="color:#444;" href="https://erythrun.github.io/resume/">https://erythrun.github.io/resume/</a>
                         </p>
                     </article>
                 </div>
